database connection and test api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/banking_system
+spring.datasource.username=anuragyadav
+spring.datasource.password=anuragyadav
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+bank.app.jwtSecret= anuragjwtket
+bank.app.jwtExpirationMs= 86400000
+server.port=8080
