--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.16.20'
     implementation group: 'org.postgresql', name: 'postgresql'
     compile 'com.google.code.gson:gson:2.8.5'
+    annotationProcessor 'org.projectlombok:lombok'
 }
 
 test {
