transafer amount added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.hibernate.ddl-auto=update
 bank.app.jwtSecret= anuragjwtket
 bank.app.jwtExpirationMs= 86400000
 server.port=8080
+server.servlet.context-path=/eltropy/api
