--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+
 plugins {
 	id 'org.springframework.boot' version '2.4.4'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
@@ -22,6 +23,7 @@ dependencies {
     implementation group: 'org.postgresql', name: 'postgresql'
     compile 'com.google.code.gson:gson:2.8.5'
     annotationProcessor 'org.projectlombok:lombok'
+    implementation group: 'com.github.librepdf', name: 'openpdf', version: '1.3.8'
 }
 
 test {
