--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.5'
     annotationProcessor 'org.projectlombok:lombok'
     implementation group: 'com.github.librepdf', name: 'openpdf', version: '1.3.8'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.3.4.RELEASE'
+    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 }
 
 test {
